# LongMate

./: .gitignore  Pipfile  README.md  log_file.txt  pyproject.toml  test_case.py
LongMate/: CountsTable.py  __init__.py  diversity.py
long_mate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_countsTable.py
