[build-system]
requires = ["setuptools", "wheel"] # setuptools and wheel are necessary for the build

[project]
name = "LongMate"
version = "0.1"
description = "(Almost) Everything you need for processing longitudinal metagenomic count data in one place!"
authors = [
    {name = "Sam Windle", email = "sam@windle.me.uk"}
]
readme = "README.md"
homepage = "myfancywebsite.com"
license = "GPLv3"

[project.urls]
Source = "myfancywebsite.com"

[project.scripts] # Define scripts here if you have any

[project.dependencies]
numpy = "*"
matplotlib = "*"
scipy = "*"

[project.optional-dependencies] # Define optional dependencies here if you have any